# spaces-scanner-rs

./: README.md
etc/: config.yaml
src/: Cargo.toml
src/conf/: Cargo.toml
src/conf/src/: conf.rs
src/spaces-search/: Cargo.toml
src/spaces-search/src/: spaces_search.rs
