[package]
name = "spaces-search"
version = "1.0.0"
edition = "2021"
authors = ["bkeeper.eth <bkeeper_eth@protonmail.com>"]

[dependencies]
chrono = "0.4.19"
clap = "3.0.0"
log4rs = "1.0"
log = "0.4.14"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] } 
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.9.24"

conf = { path = "../conf" }

[[bin]]
name = "spaces-search"
path = "src/spaces_search.rs"
